--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC Hardware Shop</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/prebuilt.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/sale.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/profile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="./css/spapp.css">
+
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.spapp.min.js"></script>
+    <script src="./js/script.js"></script>
 </head>
 <body>
     
@@ -18,11 +28,11 @@
             <a class="navbar-brand me-auto" href="#home" onclick="navigateTo('home')">PC Hardware Shop</a>
             <div class="mx-auto d-flex align-items-center">
                 <ul class="navbar-nav d-flex flex-row">
-                    <li class="nav-item me-3"><a class="nav-link text-white" href="#home" onclick="navigateTo('home')">Home</a></li>
-                    <li class="nav-item me-3"><a class="nav-link text-white" href="#products" onclick="navigateTo('products')">Products</a></li>
-                    <li class="nav-item me-3"><a class="nav-link text-white" href="#prebuilt" onclick="navigateTo('prebuilt')">Prebuilt PCs</a></li>
-                    <li class="nav-item me-3"><a class="nav-link text-white" href="#sale" onclick="navigateTo('sale')">Sale</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#profile" onclick="navigateTo('profile')">Profile</a></li>
+                    <li class="nav-item me-3"><a class="nav-link text-white" href="#home">Home</a></li>
+                    <li class="nav-item me-3"><a class="nav-link text-white" href="#products">Products</a></li>
+                    <li class="nav-item me-3"><a class="nav-link text-white" href="#prebuilt">Prebuilt PCs</a></li>
+                    <li class="nav-item me-3"><a class="nav-link text-white" href="#sale">Sale</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#profile">Profile</a></li>
                 </ul>
             </div>
             <form class="d-flex me-3" role="search">
@@ -30,21 +40,46 @@
                 <button class="btn btn-outline-light" type="submit">Search</button>
             </form>
             <div class="ms-auto">
-                <a href="#login" class="btn btn-outline-light me-2" onclick="navigateTo('login')">Login</a>
-                <a href="#register" class="btn btn-primary" onclick="navigateTo('register')">Register</a>
+                <a href="#login" class="btn btn-outline-light me-2">Login</a>
+                <a href="#register" class="btn btn-primary">Register</a>
             </div>
         </div>
     </nav>
 
    
-    <main id="content" class="container py-5">
-        
+    <main id="spapp" role="main">
+        <section id="home" data-load="home.html">
+        </section>
+        <section id="login" data-load="login.html">
+        </section>
+        <section id="products" data-load="products.html">
+        </section>
+        <section id="prebuilt" data-load="prebuilt.html">
+        </section>
+        <section id="sale" data-load="sale.html">
+        </section>
+        <section id="profile" data-load="profile.html">
+        </section>
+        <section id="register" data-load="register.html">   
+        </section>
+        <section id="register" data-load="register.html" data-css="css/register.css"></section>
     </main>
-
+   
    
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 PC Hardware Shop</p>
     </footer>
+
+    <script>
+        var app = $.spapp({
+            defaultView: "#home",
+            templateDir: "./views/"
+
+        });
+
+
+        app.run();
+    </script>
 
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
