--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -42,6 +42,7 @@
             <div class="ms-auto">
                 <a href="#login" class="btn btn-outline-light me-2">Login</a>
                 <a href="#register" class="btn btn-primary">Register</a>
+                <a href="#admin" class="btn btn-warning admin-only" style="display:none;">Admin Panel</a>
             </div>
         </div>
     </nav>
@@ -63,6 +64,7 @@
         <section id="register" data-load="register.html">   
         </section>
         <section id="register" data-load="register.html" data-css="css/register.css"></section>
+        <section id="admin" data-load="admin.html" data-css="css/admin.css"></section>
     </main>
    
    
