--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/spapp.css">
 
     
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 
@@ -94,7 +94,7 @@
         app.run();
     </script>
 
-   
+    <script src="js/script.js"></script>
     <script src="utils/constants.js"></script>
     <script src="utils/rest-client.js"></script>
     <script src="utils/utils.js"></script>
